poketwo/poketwo_networking.k8s.io-v1_Ingress_imgen-rust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: imgen-rust-ingress
  namespace: poketwo
spec:
  rules:
  - host: imgen.poketwo.io
    http:
      paths:
      - backend:
          service:
            name: imgen-rust
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - imgen.poketwo.io
    secretName: imgen-rust-ingress-tls
